# FinOps-Pipelines

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  SUPPORT.md  example.env  pyproject.toml  requirements_dev.txt
docs/: architecture.md  code_styles.md  data_engineering.md  database_troubleshoot.md  deployment.md  developers.md  operations.md  patch_release.md  powerbi.md  readme.md  security.md  troubleshooting.md  validate_data.md
docs/original/: ArchitectureOverview.vsdx
pipeline/azure_data_factory_ori/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json  PrePostDeploymentScript.ps1  adf-cloud-financial-management_GlobalParameters.json  package-lock.json
pipeline/azure_data_factory_patch/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
pipeline/azure_data_factory_prod/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
report/: CostOptimization.pbit  RecipesReport.pbit
script/: __init__.py  apply_arm_export  check_datafactory_arm_format  check_shellcheck  check_sqlfluff  check_windows_line_endings  create_data_changelog  deploy_all  format_json.py  get_adf_pipeline_etag  get_version_no  run_in_env  stage_files  validate_data  validate_data.py
script/data_files/: actual_cost_files  amortized_cost_files
script/patch/: patch_0.1_prereq_test_env_sql  patch_0.2_prereq_test_env_storage  (+3 more)
sql/: data_patch.sql  data_patch_validate.sql  monitor.sql  schema_patch_0.sql  schema_patch_1.sql  schema_patch_2.sql  schema_patch_3.sql  schema_patch_4.sql
test/: test_format_json.py
(+57 files in other folders)
