[project]
name        = "azure_cfm"
version     = "2023.05.1"
description = "Azure/Cloud-Financial-Management project"
readme      = "README.md"

[tool.setuptools.packages]
find = {}


[tool.bandit]
exclude = [".venv/*.*"]
exclude_dirs = [".venv"]
tests = ["B108", "B306", "B307", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B602", "B604"]
